--- a/style/style.css
+++ b/style/style.css
@@ -11,8 +11,6 @@ body{
     background: #e6e6e6;
 }
 
-
-
 /*   *****Layout*****  */
 
 #area-cabecalho{
@@ -30,11 +28,9 @@ body{
 #area-principal{
     width:920px;    
     margin: 0 auto;
+    padding: 15px;
 }
 
-#area-postagens, #area-lateral{
-    background: white;
-}
 
 #area-postagens{
     width:660px;
@@ -52,6 +48,18 @@ body{
     float:right;
 }
 
+.conteudo-lateral{
+    background: white;
+    padding: 10px;
+    margin-bottom: 20px;
+}
+
+.postagem-lateral{
+    font-size: 0.8em;
+    padding: 5px;
+    border-bottom: 1px dotted #CCC;
+}
+
 #rodape{
     clear: both;
     text-align: center;
@@ -65,24 +73,26 @@ a{
     text-decoration: none;
 }
 
-a:link, a:visited{
+a:link,  a:visited{
+    color: #f7b600;
+}
+
+a:hover{
+    text-decoration: underline;
+}
+
+
+#area-cabecalho a:link, #area-cabecalho a:visited{
     color: #fff;
     padding: 8px 12px;
 }
 
-a:hover{
+#area-cabecalho a:hover{
     color: #f7b600;
     background: #fff;
+    text-decoration: none;
 }
 
-
-#area-logo{
-    
-}
-
-#area-menu{
-    
-}
 
 /*   ****Formatações Geras****   */
 
@@ -91,6 +101,25 @@ h1{
     font-size: 2.5em; 
 }
 
+h2{
+    color: #f7b600;
+}
+
+h3{
+    color: #565656;
+    background: #CCC;
+    padding: 5px;
+}
+
 .branco{
     color:#FFF;
 }
+
+.data-postagem{
+    font-size:0.8em;
+    border-bottom: solid #f4f4f4;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+    display: block;
+}
+
